--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,7 +1,10 @@
-<ion-view ng-controller="MapCtrl">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Map</h1>
-    </ion-header-bar>
+<ion-view view-title="Map" ng-controller="MapCtrl">
+    <ion-header-bar class="bar-assertive">
+    <h1 class="title">Login</h1>
+    <div class="buttons">
+      <button class="button button-clear" ng-click="logout()">Close</button>
+    </div>
+  </ion-header-bar>
 
     <ion-content scroll="false">
       <map on-create="mapCreated(map)"></map>
